Update rhods-dashboard anti-affinity to account for correct name
Signed-off-by: Anish Asthana <anishasthana1@gmail.com>

--- a/odh-dashboard/base/deployment.yaml
+++ b/odh-dashboard/base/deployment.yaml
@@ -22,7 +22,7 @@ spec:
                     - key: app
                       operator: In
                       values:
-                        - odh-dashboard
+                        - rhods-dashboard
                 topologyKey: topology.kubernetes.io/zone
       serviceAccount: rhods-dashboard
       containers:
