Add ML Pipelines to Open Data Hub Core
Signed-off-by: Anish Asthana <anishasthana1@gmail.com>

Co-authored-by: Dharmit Dalvi <46318816+DharmitD@users.noreply.github.com>
Co-authored-by: Giulio <giulio.m.frasca@gmail.com>
Co-authored-by: Ricardo Martinelli de Oliveira <rmartine@redhat.com>

--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -81,6 +81,14 @@ spec:
         name: manifests
         path: odh-notebook-controller
     name: odh-notebook-controller
+  - kustomizeConfig:
+      overlays:
+        - metadata-store-mysql
+        - ml-pipeline-ui
+      repoRef:
+        name: manifests
+        path: ml-pipelines
+    name: ml-pipelines
   repos:
   - name: kf-manifests
     uri: https://github.com/opendatahub-io/manifests/tarball/master
