--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -169,6 +169,11 @@ spec:
         name: manifests
         path: model-mesh
     name: model-mesh
+  - kustomizeConfig:
+      repoRef:
+        name: manifests
+        path: kserve
+    name: kserve
   repos:
   - name: kf-manifests
     uri: https://github.com/opendatahub-io/manifests/tarball/master
