--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -71,9 +71,19 @@ spec:
         name: manifests
         path: odh-notebook-controller
     name: odh-notebook-controller
+  - kustomizeConfig:
+      overlays:
+        - metadata-store-mysql
+        - ml-pipeline-ui
+      repoRef:
+        name: pipeline-manifests
+        path: kfp-tekton
+    name: kfp-tekton
   repos:
   - name: kf-manifests
     uri: https://github.com/opendatahub-io/manifests/tarball/master
   - name: manifests
     uri: https://github.com/opendatahub-io/odh-manifests/tarball/master
+  - name: pipeline-manifests
+    uri: https://github.com/opendatahub-io/odh-manifests/tarball/pipelines-prototype
   version: master
