--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -169,9 +169,18 @@ spec:
         name: manifests
         path: model-mesh
     name: model-mesh
+  - kustomizeConfig:
+      overlays:
+        - metadata-store-mysql
+      repoRef:
+        name: pipeline-manifests
+        path: kfp-tekton
+    name: kfp-tekton
   repos:
   - name: kf-manifests
     uri: https://github.com/opendatahub-io/manifests/tarball/master
   - name: manifests
     uri: https://github.com/opendatahub-io/odh-manifests/tarball/master
+  - name: pipeline-manifests
+    uri: https://github.com/opendatahub-io/odh-manifests/tarball/pipelines-prototype
   version: master
