--- a/kfdef/kfctl_openshift_ml-pipelines.yaml
+++ b/kfdef/kfctl_openshift_ml-pipelines.yaml
@@ -37,6 +37,7 @@ spec:
         overlays:
           - metadata-store-mysql
           - ml-pipeline-ui
+          - minio
         repoRef:
           name: manifests
           path: ml-pipelines
