--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -80,6 +80,7 @@ spec:
       overlays:
         - metadata-store-mysql
         - ml-pipeline-ui
+        - minio
       repoRef:
         name: manifests
         path: ml-pipelines
