Adding overlay for minio artifacts

--- a/kfdef/kfctl_openshift_ml-pipelines.yaml
+++ b/kfdef/kfctl_openshift_ml-pipelines.yaml
@@ -14,6 +14,7 @@ spec:
         overlays:
           - metadata-store-mysql
           - ml-pipeline-ui
+          - object-store-minio
         repoRef:
           name: manifests
           path: ml-pipelines
