--- a/ml-pipelines/overlays/object-store-minio/deployments/minio.yaml
+++ b/ml-pipelines/overlays/object-store-minio/deployments/minio.yaml
@@ -33,7 +33,7 @@ spec:
                 secretKeyRef:
                   key: secretkey
                   name: $(artifact_secret_name)
-          image: gcr.io/ml-pipeline/minio:RELEASE.2019-08-14T20-37-41Z-license-compliance
+          image: minio
           name: minio
           ports:
             - containerPort: 9000
