--- a/tests/setup/kfctl_openshift.yaml
+++ b/tests/setup/kfctl_openshift.yaml
@@ -85,6 +85,7 @@ spec:
       overlays:
         - metadata-store-mysql
         - ml-pipeline-ui
+        - object-store-minio
       repoRef:
         name: manifests
         path: ml-pipelines
