--- a/data-science-pipelines-operator/manager/manager-service.yaml
+++ b/data-science-pipelines-operator/manager/manager-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-science-pipelines-operator
+  name: service
   labels:
     control-plane: controller-manager
     app.kubernetes.io/created-by: data-science-pipelines-operator
